--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BelajarAndroidDasar">
         <activity
-            android:name=".MainActivity"
+            android:name=".GameActivity"
             android:exported="true">
             <intent-filter>
                 <!-- Ini diisi intent Main buat nandain activity ini main -->
